<resources>
    <string name="app_name">MADIUN TODAY</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <!--play store-->
    <string name="appid">ca-app-pub-2915636858158140~5178572620</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="signup"><b><u>Sign Up</u></b></string>
    <string name="message_empty_email">Please provide a non empty email!</string>
    <string name="message_invalid_email">Please provide a valid email!</string>
    <string name="message_empty_password">Please provide a non empty password!</string>
    <string name="message_empty_name">Please provide a non empty username!</string>
    <string name="action_news">News</string>
    <string name="action_about">About</string>
    <string name="action_dbhcht">DBH CHT</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_tv">TV</string>
    <string name="picture_transition_name">picture transition</string>
    <string name="title_source_url_article">Source url</string>
    <string name="food_merchant_label_call_button">CALL</string>
    <string name="telp">tel: 0351467327</string>
    <string name="dinas_kominfo">Dinas Komunikasi dan Informatika Kota Madiun</string>
    <string name="dev">DEVELOPER</string>
    <string name="devcon">+6287712385474</string>
    <string name="discon">0351467327</string>
    <string name="teldevcon">tel:+6287712385474</string>
    <string name="teldiscon">tel:0351467327</string>
    <string name="dev_need_to_work">Application Development Services</string>
    <string name="address_mdt">Jl. Pahlawan No 37 Madiun</string>
    <string name="dev_email">Email: winnerawan@gmail.com</string>
    <string name="mdt_desc">Madiuntoday.id menyediakan informasi dan berita seputar Kota Madiun. Tujuannya untuk memudahkan layanan berita kepada warga Kota Madiun tanpa batasan waktu dan tempat. Juga sebagai sarana sosialisasi ketentuan cukai.
    Madiuntoday.id berdiri sejak Oktober 2017 di bawah naungan Dinas Komunikasi dan Informatika Kota Madiun. Reportase disajikan berupa berita tulisan, berita foto maupun video. Topik yang dibahas berkaitan dengan ekonomi, pendidikan, kesehatan, olahraga, sosial budaya, maupun peristiwa yang terjadi di Kota Madiun.
    Operasional madiuntoday.id dibiayai menggunakan Dana Bagi Hasil Cukai Hasil Tembakau (DBH-CHT). Madiuntoday.id tidak memiliki afiliasi apapun dengan partai politik atau kelompok kepentingan tertentu sehingga menjamin netralitas.</string>
    <string name="related_post">Related News</string>
    <string name="search_hint">Search</string>
    <string name="title_edit">Edit</string>
    <string name="title_complete">Done</string>
    <string name="sharefacebook">Share on Facebook</string>
    <string name="sharewhatsapp">Share on WhatsApp</string>
    <string name="share">Share</string>
    <string name="choose">Choose One</string>
    <string name="share_by">Share with MADIUN TODAY APP</string>
    <string name="share_by_link">https://play.google.com/store/apps/details?id=net.winnerawan.madiun</string>
    <string name="categories">KATEGORI</string>
    <string name="error_empty_data">empty</string>

</resources>
