<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_news"
            android:title="@string/action_news"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@mipmap/ic_newss_on">
    </item>
    <item
            android:id="@+id/action_tv"
            android:title="@string/action_tv"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@mipmap/ic_tv_on">
    </item>
    <item
            android:id="@+id/action_gallery"
            android:title="@string/action_gallery"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@mipmap/ic_gallery_on">
    </item>
    <item
            android:id="@+id/action_dbhcht"
            android:title="@string/action_dbhcht"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@mipmap/ic_coin_on">
    </item>
    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@mipmap/ic_mtd_on">
    </item>
</menu>