<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:attrs="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">


    <RelativeLayout
            android:layout_width="match_parent" android:layout_height="match_parent">
        <!--<ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"/>-->
        <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    android:elevation="0dp"
                    android:fitsSystemWindows="true"
                    android:padding="0dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title=""
                    app:titleTextColor="@color/black"/>


            <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                        android:layout_height="wrap_content">


                <LinearLayout android:background="@color/white" android:orientation="vertical"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content">

                    <TextView
                            fontPath="fonts/google_sans_medium.ttf"
                            android:textStyle="bold"
                            android:id="@+id/title"
                            android:textColor="#000000"
                            android:layout_marginRight="@dimen/padding_16dp"
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:layout_marginTop="@dimen/padding_4dp"
                            android:layout_marginBottom="@dimen/padding_4dp"
                            android:textSize="24sp"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            attrs:ignore="MissingPrefix"/>

                    <TextView
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:id="@+id/txt_time"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:background="@drawable/time_bga"
                            android:padding="@dimen/padding_4dp"
                            android:textColor="@color/white"/>

                    <TextView
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:id="@+id/txt_share"
                            android:textSize="16sp"
                            android:textAllCaps="true"
                            android:layout_marginTop="@dimen/padding_8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/share"
                            android:paddingTop="@dimen/padding_4dp"
                            android:paddingBottom="@dimen/padding_4dp"
                            android:paddingLeft="@dimen/padding_8dp"
                            android:paddingRight="@dimen/padding_8dp"
                            android:background="@color/colorAccent"
                            android:textColor="@color/white"/>

                    <org.sufficientlysecure.htmltextview.HtmlTextView
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:layout_marginRight="@dimen/padding_16dp"
                            android:textColor="#000000"
                            android:layout_marginTop="@dimen/padding_4dp"
                            android:layout_marginBottom="@dimen/padding_4dp"
                            android:id="@+id/first"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="match_parent" android:layout_height="wrap_content"/>

                    <android.support.v7.widget.CardView
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:layout_marginRight="@dimen/padding_16dp"
                            android:layout_marginTop="@dimen/padding_4dp"
                            android:layout_marginBottom="@dimen/padding_4dp"
                            android:id="@+id/containerGallery"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <ImageView android:visibility="gone" android:id="@+id/image" android:layout_width="match_parent"
                                   android:layout_height="260dp"/>

                        <android.support.v4.view.ViewPager
                                android:id="@+id/vp_article_image"
                                android:layout_width="match_parent"
                                android:layout_height="260dp">

                        </android.support.v4.view.ViewPager>

                        <com.rd.PageIndicatorView
                                android:layout_marginTop="@dimen/padding_8dp"
                                android:layout_gravity="center"
                                android:id="@+id/pageIndicatorView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                app:piv_animationType="scale"
                                app:piv_dynamicCount="true"
                                app:piv_interactiveAnimation="true"
                                app:piv_selectedColor="#00A2E8"
                                app:piv_unselectedColor="@color/grey_500"
                                app:piv_viewPager="@id/vp_article_image"
                                attrs:piv_padding="2dp"
                                attrs:piv_radius="2dp"/>
                    </android.support.v7.widget.CardView>

                    <LinearLayout android:orientation="vertical" android:layout_gravity="center" android:id="@+id/containerAds" android:layout_width="match_parent"
                                  android:layout_height="wrap_content">

                    </LinearLayout>
                    <org.sufficientlysecure.htmltextview.HtmlTextView
                            android:id="@+id/center"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:layout_marginRight="@dimen/padding_16dp"
                            android:layout_marginTop="@dimen/padding_4dp"
                            android:textColor="#000000"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:id="@+id/txt_source"
                            android:textSize="16sp"
                            android:textAllCaps="true"
                            android:layout_marginTop="@dimen/padding_8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/title_source_url_article"
                            android:background="@color/red"
                            android:padding="@dimen/padding_4dp"
                            android:textColor="@color/white"/>


                    <TextView
                            android:textStyle="bold"
                            android:id="@+id/related"
                            fontPath="fonts/google_sans_medium.ttf"
                            android:text="@string/related_post"
                            android:textColor="#000000"
                            android:layout_marginRight="@dimen/padding_16dp"
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:layout_marginTop="@dimen/padding_16dp"
                            android:layout_marginBottom="@dimen/padding_4dp"
                            android:textSize="18sp"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            attrs:ignore="MissingPrefix"/>



                    <android.support.v7.widget.RecyclerView
                            android:layout_marginRight="@dimen/padding_16dp"
                            android:layout_marginLeft="@dimen/padding_16dp"
                            android:layout_marginTop="@dimen/padding_4dp"
                            android:layout_marginBottom="@dimen/padding_16dp"
                            android:id="@+id/related_news"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>


                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
        <include
                layout="@layout/detail_placeholder"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>